# Video_For_Lazies

./: .gitattributes  .gitignore  README.md  SECURITY.md  SOURCE.md  THIRD_PARTY_NOTICES.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  portable-artifacts.yml
app/: .gitignore  README.md  ffmpeg-capabilities.json  index.html  package-lock.json  package.json
app/scripts/: check-ffmpeg-urls.mjs  check-version.mjs  ffmpegBundle.mjs  ffmpegCapabilities.mjs  generate-portable-docs.mjs  generate-release-notes.mjs  make-portable.mjs  portable-smoke-support.mjs  portableArtifacts.mjs  portableRelease.mjs  prepare-release-assets.mjs  run-portable-codec-plan-smoke.mjs  run-portable-export-smoke.mjs  run-portable-g5-smoke.mjs  run-portable-g6-fast-trim-smoke.mjs  run-portable-g7-operational-ux-smoke.mjs  run-portable-media-depth-smoke.mjs  run-portable-smoke.mjs  run-release-portable.mjs  run-sync-ffmpeg-sidecar.mjs  set-version.mjs  sign-update-manifest.mjs  sync-ffmpeg-sidecar.mjs  updateManifests.mjs  verify-update-manifest.mjs  verify-windows-update-helper-manifest.ps1  versioning.mjs  windows-g6-send-keys.ps1  windows-portable-export-smoke.ps1  windows-portable-smoke.ps1  zipEntries.mjs
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  vfl-update-helper.manifest
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  updater.rs  video.rs
app/src/lib/: types.ts  (+36 more)
app/test-support/: releaseZipFixture.js
docs/: ffmpeg-bundling.md  release.md
(+65 files in other folders)
