[package]
name = "video_for_lazies"
version = "1.1.2"
description = "Video For Lazies"
authors = ["Setmaster"]
license = "GPL-3.0-or-later"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "video_for_lazies_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
minisign-verify = "0.2"
semver = "1"
sha2 = "0.10"
tempfile = "3"
zip = "8.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
